# tobii-eye-interface

./: CMakeLists.txt  LICENSE  README.md  djeye.midi.xml  eyemover  main.cpp  meson.build
example/: CMakeLists.txt  main
tests/: main.cpp  meson.build
